[tool.poetry]
name = "usaddress"
version = "0.5.10"
description = "Parse US addresses using conditional random fields"
authors = ["Tom Scott <tscott@stratanetworks.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nose2 = "^0.14.1"
parserator = "^0.3"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.4"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
